finish add new todo

--- a/style.css
+++ b/style.css
@@ -1,243 +1,54 @@
-body{
-    background-color: #7B1FA2;
-    font-family: 'Text Me One', sans-serif;
-}
-
-.container{
-    width: 90%;
-    max-width: 1400px;
+* {
+    margin: 0;
+    padding: 0;
+  }
+  
+  html {
+    background: #333;
+    color: #bbb;
+    font-family: Menlo;
+  }
+  
+  .controls {
+    position: fixed;
+    text-align: center;
+    top: 1em;
+    width: 100%;
+  }
+  
+  .button {
+    color: #bbb;
+    font-size: 4vw;
+    margin: 0 0.5em;
+    text-decoration: none;
+  }
+  
+  .button:first-child {
+      margin-left: 0;
+  }
+  
+  .button:last-child {
+      margin-right: 0;
+  }
+  
+  .button:hover {
+    color: white;
+  }
+  
+  .stopwatch {
+    font-size: 20vw;
+    height: 100%;
+    line-height: 100vh;
+    text-align: center;
+  }
+  
+  .results {
+    border-color: lime;
+    list-style: none;
+    margin: 0;
+    padding: 0;
     position: absolute;
-    top: 50%;
+    bottom: 0;
     left: 50%;
-    transform: translate(-50%,-50%);
-    display: flex;
-    justify-content: center;
-}
-
-.ClockHolder{
-    width: 500px;
-    background-color: #1b252a;
-    padding: 30px 50px;
-    border-radius: 15px;
-    border: 3px solid #0277BD;
-    position: relative;
-}
-
-.ClockHolder::after{
-    content: " ";
-    position: absolute;
-    bottom: -15px;
-    left: 50%;
-    width: 70%;
-    height: 15px;
-    background-color: #0277bd;
-    transform: translate(-50%,0);
-    border-radius: 3px 3px 8px 8px;
-}
-
-.ClockHolder::before{
-
-}
-
-.WeekDays{
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-    text-transform: uppercase;
-    color: #646c72;
-    cursor: default;
-}
-
-.WeekDays .active{
-    color: aliceblue;
-    position: relative;
-}
-
-.WeekDays .active::after{
-    content: "";
-    position: absolute;
-    bottom: -3px;
-    left: 0;
-    height: 2px;
-    width: 100%;
-    background-color: aliceblue;
-}
-
-.Numbers,
-.TimeHolder{
-    display: flex;
-    justify-content: space-around;
-    width: 100%;
-    padding: 20px 0 5px;
-    align-items: flex-end;
-}
-
-.NumberHolder{
-    position: relative;
-    width: 60px;
-    height: 95px;
-}
-
-.d1 , .d2 , .d3 , .d4 , .d5 , .d6 , .d7{
-    width: 8px;
-    height: 40px;
-    background-color: azure;
-    position: absolute;
-}
-
-.d1::after , .d2::after , .d3::after , .d4::after , .d5::after , .d6::after , .d7::after{
-    content: "";
-    position: absolute;
-    background-color: azure;
-    width: 7px;
-    height: 7px;
-    top: -7px;
-    left: 0;
-    clip-path: polygon(0 0, 0% 100%, 100% 100%);
-}
-
-
-.d1::before , .d2::before , .d3::before , .d4::before , .d5::before , .d6::before , .d7::before{
-    content: "";
-    position: absolute;
-    background-color: azure;
-    width: 7px;
-    height: 7px;
-    bottom: -7px;
-    left: 0;
-    clip-path: polygon(0 0, 100% 0, 0 100%);
-}
-.d7{
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%) rotate(90deg);
-}
-
-.d7::before{
-    clip-path: polygon(0 0, 100% 0, 50% 100%);
-}
-
-.d7::after{
-    clip-path: polygon(0 100%, 100% 100%, 50% 0);
-}
-
-@keyframes From01{
-    from{
-        top: 0;
-        left: 0;
-    }
-    to{
-        top: 0;
-        left: calc( 100% - 7px );
-        transform: rotate(180deg);
-    }
-}
-@keyframes From02{
-    from{
-        bottom: 0;
-        left: 0;
-    }
-    to{
-        bottom: 0;
-        left: calc(100% - 7px);
-        transform: rotate(180deg);
-    }
-}
-@keyframes From05{
-    from{
-        bottom: 0;
-        left: 0;
-    }
-    to{
-        bottom: 0;
-        left: calc(100% - 7px);
-        transform: rotate(180deg);
-    }
-}
-@keyframes From06{
-    from{
-        bottom: -22px;
-        left: 7px;
-        transform: rotate(-90deg) translate(-50%,50%);
-    }
-    to{
-        bottom: 0;
-        left: calc(100% - 7px);
-        transform: rotate(180deg) translate(0,0);
-    }
-}
-.TimeOptions{
-    display: flex;
-    flex-direction: column;
-    color: aliceblue;
-}
-.Numbers>span{
-    font-size: 0 7px;
-    color: aliceblue;
-}
-.Formats span{
-    display: none;
-    color: aliceblue;
-    font-size: 2em;
-    cursor: default;
-}
-.Formats .active{
-    display: block;
-}
-
-.Type{
-    display: flex;
-    flex-direction: column;
-    color: #98afaf;
-}
-
-.Type span{
-    position: relative;
-    margin: 2px 0;
-    cursor: pointer;
-}
-
-.Type span::before{
-    content: "";
-    position: absolute;
-    bottom: -1px;
-    left: 0;
-    width: 0;
-    height: 1px;
-    background-color: #98afaf;
-    transition: all .4s ease;
-}
-
-.Type span:hover::before{
-    width: 100%;
-}
-
-.TimeFormat{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 110px;
-}
-
-.Type .active{
-    color: aquamarine;    
-}
-.Type .active::after{
-    content: "\f053";
-    font-weight: 900;
-    font-family: "Font Awesome 5 Free";
-    position: absolute;
-    top: 50%;
-    right: -20px;
-    transform: translate(-50%,-50%);
-}
-
-.Type .active::before{
-    width: 100%;
-}
-
-.TimeOptions i{
-    margin: 10px 3px;
-    position: relative;
-    cursor: pointer;
-}
+    transform: translateX(-50%);
+  }
